deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: springapp
spec:
  selector:
    app: springapp
  ports:
    - protocol: TCP
      port: 8081
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
        - name: springapp
          image: thupa/demo-springapp
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: minimal-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  ingressClassName: nginx-example
#  rules:
#    - http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: springapp
#                port:
#                  number: 8081
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gradle
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springapp
                port:
                  number: 8081
